tests/snapshots/http_server__get_index_with_param.snap
---
source: tests/http_server.rs
assertion_line: 74
expression: body
---
<!DOCTYPE html>
<html>

<head>
  <meta charset="utf-8">
  <title>Wmd</title>
  <link rel="search" href="/opensearch.xml" type="application/opensearchdescription+xml" title="Wmd">
</head>

<body>
  <p>
  <form method="GET" action="/search">
    <input type="text" name="q" value="rs hello">
    <button>Go</button>
  </form>
  </p>

  <p>
    <a href="/prefixes">[Prefixes]</a>
  </p>
</body>

</html>

