tests/snapshots/http_server__get_prefixes.snap
---
source: tests/http_server.rs
assertion_line: 68
expression: body
---
<!DOCTYPE html>
<html>

<head>
  <meta charset="utf-8">
  <title>Wmd</title>
  <link rel="search" href="/opensearch.xml" type="application/opensearchdescription+xml" title="Wmd">
</head>

<body>
  <ul>
    <li>
      <b>rs</b> for The Rust Standard Library, <code>https://doc.rust-lang.org/std/index.html?search&#x3D;{keywords}</code>
    </li>
    <li>
      <b>drx</b> for Docs.rs (direct), <code>https://docs.rs/{keywords}</code>
    </li>
  </ul>
</body>

</html>

