tests/snapshots/http_server__get_robots_txt.snap
---
source: tests/http_server.rs
assertion_line: 89
expression: body
---
User-agent: *
Disallow: /

